--- a/website/index.html
+++ b/website/index.html
@@ -466,6 +466,20 @@
         display: block;
       }
 
+      div {
+        &:has(> * + button[type="reset"]) {
+          display: flex;
+          gap: 0.5rem;
+          align-items: baseline;
+
+          button {
+            color: var(--off-color);
+            font-size: var(--font-size-sm);
+            line-height: var(--line-height-sm);
+          }
+        }
+      }
+
       field,
       h1 {
         text-transform: capitalize;
@@ -655,6 +669,7 @@
         appearance: none;
         background: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="gray"><path fill-rule="evenodd" d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" /></svg>')
           100% 50% no-repeat transparent;
+        flex: 1;
 
         &:focus-visible {
           border: 0;
@@ -769,8 +784,8 @@
             width: 0.375rem;
             height: 0.375rem;
             border-radius: 9999px;
-            align-self: center;
             display: inline-block;
+            margin-bottom: 0.125rem;
             margin-left: 0.25rem;
           }
         }
@@ -953,14 +968,14 @@
         pointer-events: none;
       }
 
-      .chart-list {
+      .chart > .panes {
         position: relative;
         display: flex;
         flex-direction: column;
         flex: 1;
         min-height: 0;
 
-        > .chart-wrapper {
+        > .pane {
           z-index: 20;
           position: relative;
           min-height: 0px;
@@ -1012,9 +1027,9 @@
             }
           }
 
-          > .chart-div {
+          > .lightweight-chart {
             height: 100%;
-            margin-right: calc(var(--negative-main-padding) - 0.5rem);
+            margin-right: var(--negative-main-padding);
           }
         }
 
