--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>kibō</title>
+    <title>kibo</title>
     <meta
       name="description"
       content="An open source Bitcoin Core data extractor and visualizer"
