--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>kibo</title>
+    <title>kibo.money</title>
     <meta
       name="description"
       content="An open source Bitcoin Core data extractor and visualizer"
@@ -37,7 +37,7 @@
         line-height: 1.5;
         -webkit-text-size-adjust: 100%;
         tab-size: 4;
-        font-family: "Satoshi", ui-sans-serif, system-ui, sans-serif,
+        font-family: "Geist mono", ui-sans-serif, system-ui, sans-serif,
           "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
           "Noto Color Emoji";
         font-feature-settings: "ss03";
@@ -282,8 +282,8 @@
       }
 
       @font-face {
-        font-family: "Satoshi";
-        src: url("./assets/fonts/satoshi/2024-09/font.var.woff2")
+        font-family: "Geist mono";
+        src: url("./assets/fonts/geist_mono/1.4.01/GeistMono[wght].woff2")
           format("woff2");
         font-weight: 100 900;
         font-display: block;
@@ -449,9 +449,9 @@
       }
 
       h1 {
-        text-transform: capitalize;
-        font-size: var(--font-size-3xl);
-        line-height: var(--line-height-3xl);
+        text-transform: uppercase;
+        font-size: var(--font-size-2xl);
+        line-height: var(--line-height-2xl);
         font-weight: 300;
       }
 
@@ -598,7 +598,6 @@
           > fieldset {
             width: 100%;
             display: flex;
-            box-shadow: 0 0 1rem 0.5rem var(--background-color);
             gap: 1rem;
 
             > label {
@@ -787,7 +786,7 @@
           a,
           button,
           summary {
-            padding: 0.375rem 0;
+            padding: 0.25rem 0;
           }
 
           ul {
@@ -796,7 +795,7 @@
             overflow: hidden;
 
             li {
-              text-transform: capitalize;
+              text-transform: lowercase;
 
               display: block;
               position: relative;
@@ -887,7 +886,7 @@
           transparent,
           var(--background-color)
         );
-        height: calc(var(--main-padding) * 10);
+        height: 24rem;
         bottom: 0;
         left: 0;
         right: 0;
