--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -283,9 +283,8 @@
 
       @font-face {
         font-family: "Geist mono";
-        src: url("./assets/fonts/geist_mono/1.4.01/GeistMono[wght].woff2")
-          format("woff2");
-        font-weight: 100 900;
+        src: url("./assets/fonts/geist_mono_var_1_4_01.woff2") format("woff2");
+        font-weight: 300 500;
         font-display: block;
         font-style: normal;
       }
@@ -521,7 +520,7 @@
             gap: 0.25rem;
 
             > span.colors {
-              margin-top: 0.25rem;
+              margin-top: 0.15rem;
               display: flex;
               width: 0.625rem;
               height: 0.625rem;
@@ -670,6 +669,7 @@
       sup {
         opacity: 0.5;
         margin-left: 0.25rem;
+        font-weight: 500;
       }
 
       small {
@@ -779,7 +779,7 @@
             line-height: var(--line-height-base);
 
             ul {
-              margin-left: 0.375rem;
+              margin-left: 0.25rem;
             }
           }
 
