--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -268,7 +268,6 @@
         --negative-main-padding: calc(-1 * var(--main-padding));
 
         --font-weight-base: 400;
-        --font-weight-bold: 700;
 
         --transform-scale-active: scaleY(0.9);
 
@@ -377,7 +376,7 @@
       }
 
       b {
-        font-weight: var(--font-weight-bold);
+        font-weight: 700;
       }
 
       body {
