computer + kibo: part 9

--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -877,9 +877,10 @@
         background-image: linear-gradient(
           to bottom,
           transparent,
+          var(--background-color) 90%,
           var(--background-color)
         );
-        height: 24rem;
+        height: 21rem;
         bottom: 0;
         left: 0;
         right: 0;
