kibo: database: part 2

--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -1607,7 +1607,7 @@
     </main>
     <aside id="aside">
       <div id="charts" hidden></div>
-      <div id="database" hidden></div>
+      <div id="table" hidden></div>
       <div id="simulation" hidden></div>
     </aside>
     <div id="share-div" hidden>
