--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -899,7 +899,7 @@
         left: 0;
         top: 0;
         bottom: 0;
-        z-index: 30;
+        z-index: 40 !important;
         pointer-events: none;
       }
       .shadow-right {
