global: add some market charts

--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -441,9 +441,9 @@
       h1,
       h2 {
         text-transform: uppercase;
-        font-size: var(--font-size-2xl);
-        line-height: var(--line-height-2xl);
-        font-weight: 300;
+        font-size: var(--font-size-xl);
+        line-height: var(--line-height-xl);
+        font-weight: 350;
       }
 
       h3 {
