--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -990,12 +990,8 @@
           display: flex;
           align-items: center;
           gap: 1.5rem;
-          margin-left: var(--negative-main-padding);
-          margin-right: var(--negative-main-padding);
-          padding-left: var(--main-padding);
-          padding-right: var(--main-padding);
-          padding-top: 0.5rem;
-          padding-bottom: 0.5rem;
+          margin: -0.5rem var(--negative-main-padding);
+          padding: 1rem var(--main-padding);
           overflow-x: auto;
           min-width: 0;
           font-size: var(--font-size-sm);
