global: wip + fixed eager mode

--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -809,6 +809,8 @@
       }
 
       #share-div {
+        font-size: var(--font-size-sm);
+        line-height: var(--line-height-sm);
         padding: 1.5rem;
         backdrop-filter: blur(12px);
         position: absolute;
