--- a/websites/kibo.money/index.html
+++ b/websites/kibo.money/index.html
@@ -441,14 +441,14 @@
       h1,
       h2 {
         text-transform: uppercase;
-        font-size: var(--font-size-xl);
-        line-height: var(--line-height-xl);
-        font-weight: 350;
+        font-size: var(--font-size-lg);
+        line-height: var(--line-height-lg);
+        font-weight: 375;
       }
 
       h3 {
-        font-size: var(--font-size-xl);
-        line-height: var(--line-height-xl);
+        font-size: var(--font-size-lg);
+        line-height: var(--line-height-lg);
       }
 
       h4 {
@@ -978,6 +978,22 @@
         }
       }
 
+      .chart > legend,
+      #charts > fieldset {
+        text-transform: lowercase;
+        flex-shrink: 0;
+        display: flex;
+        align-items: center;
+        gap: 1.5rem;
+        margin: -0.75rem var(--negative-main-padding);
+        padding: 0.75rem var(--main-padding);
+        overflow-x: auto;
+        min-width: 0;
+        font-size: var(--font-size-sm);
+        line-height: var(--line-height-sm);
+        scrollbar-width: thin;
+      }
+
       .chart {
         display: flex;
         flex-direction: column;
@@ -987,19 +1003,6 @@
         margin-bottom: 1rem;
 
         > legend {
-          text-transform: lowercase;
-          flex-shrink: 0;
-          display: flex;
-          align-items: center;
-          gap: 1.5rem;
-          margin: -0.5rem var(--negative-main-padding);
-          padding: 1rem var(--main-padding);
-          overflow-x: auto;
-          min-width: 0;
-          font-size: var(--font-size-sm);
-          line-height: var(--line-height-sm);
-          scrollbar-width: thin;
-
           &:empty {
             display: none;
           }
@@ -1052,6 +1055,8 @@
           height: 100%;
           margin-right: var(--negative-main-padding);
           margin-left: var(--negative-main-padding);
+          margin-top: 0.25rem;
+          margin-bottom: 0.25rem;
 
           fieldset {
             padding: 0.5rem;
