--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -1161,7 +1161,7 @@
       }
 
       if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/scripts/service-worker.js");
+        navigator.serviceWorker.register("/service-worker.js");
       }
     </script>
 
