--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <!-- <title>kibo.money</title> -->
     <meta
       name="description"
       content="An open source Bitcoin Core data extractor and visualizer"
@@ -1114,7 +1113,7 @@
       // @ts-check
 
       const preferredColorSchemeMatchMedia = window.matchMedia(
-        "(prefers-color-scheme: dark)"
+        "(prefers-color-scheme: dark)",
       );
 
       const themeColor = window.document.createElement("meta");
@@ -1123,10 +1122,10 @@
 
       /** @param {boolean} dark */
       function updateThemeColor(dark) {
-        const backgroundColor = getComputedStyle(
-          window.document.documentElement
+        const theme = getComputedStyle(
+          window.document.documentElement,
         ).getPropertyValue(dark ? "--black" : "--white");
-        themeColor.content = backgroundColor;
+        themeColor.content = theme;
       }
 
       updateThemeColor(preferredColorSchemeMatchMedia.matches);
@@ -1134,7 +1133,7 @@
         "change",
         ({ matches }) => {
           updateThemeColor(matches);
-        }
+        },
       );
 
       if ("standalone" in window.navigator && !!window.navigator.standalone) {
