websites: default: fix sw adn co

--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -1140,9 +1140,22 @@
         window.document.documentElement.dataset.display = "standalone";
       }
 
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/service-worker.js");
-      }
+      window.addEventListener("load", () => {
+        navigator.serviceWorker
+          .register("/service-worker.js")
+          .then((registration) => {
+            console.log(
+              "Service Worker registered with scope:",
+              registration.scope,
+            );
+          })
+          .catch((error) => {
+            console.error("Service Worker registration failed:", error);
+          });
+      });
+      // if ("serviceWorker" in navigator) {
+      //   navigator.serviceWorker.register("/service-worker.js");
+      // }
     </script>
 
     <!-- --- -->
