--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -965,7 +965,7 @@
         display: flex;
         align-items: center;
         gap: 1.5rem;
-        margin: -0.75rem var(--negative-main-padding);
+        margin: -0.5rem var(--negative-main-padding);
         padding: 0.75rem var(--main-padding);
         overflow-x: auto;
         min-width: 0;
@@ -1113,7 +1113,7 @@
       // @ts-check
 
       const preferredColorSchemeMatchMedia = window.matchMedia(
-        "(prefers-color-scheme: dark)",
+        "(prefers-color-scheme: dark)"
       );
 
       const themeColor = window.document.createElement("meta");
@@ -1123,7 +1123,7 @@
       /** @param {boolean} dark */
       function updateThemeColor(dark) {
         const theme = getComputedStyle(
-          window.document.documentElement,
+          window.document.documentElement
         ).getPropertyValue(dark ? "--black" : "--white");
         themeColor.content = theme;
       }
@@ -1133,7 +1133,7 @@
         "change",
         ({ matches }) => {
           updateThemeColor(matches);
-        },
+        }
       );
 
       if ("standalone" in window.navigator && !!window.navigator.standalone) {
