--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -274,8 +274,6 @@
         --default-main-width: 25rem;
 
         --bottom-area: 69vh;
-
-        --cube: 50px;
       }
 
       [data-resize] {
@@ -1370,40 +1368,70 @@
       }
 
       #explorer {
+        --cube: 4.5rem;
+
         #chain {
           display: flex;
-          flex-direction: column;
-          gap: calc(var(--cube) * 1.1);
-          padding: 1rem;
+          flex-direction: column-reverse;
+          gap: calc(var(--cube) * 0.66);
+          padding: 2rem;
 
           .cube {
             width: var(--cube);
             height: var(--cube);
             overflow: hidden;
+            font-size: var(--font-size-sm);
+            line-height: var(--line-height-sm);
+            --color: var(--dark-gray);
+            color: var(--white);
 
             .face {
               transform-origin: 0 0;
               position: absolute;
               width: var(--cube);
               height: var(--cube);
+              padding: 0.1rem;
             }
-            .front {
-              background-color: var(--orange);
+            .right {
+              background-color: var(--color);
               transform: rotate(-30deg) skewX(-30deg)
                 translate(calc(var(--cube) * 1.3), calc(var(--cube) * 1.725))
                 scaleY(0.864);
             }
             .top {
-              background-color: var(--yellow);
+              background-color: oklch(
+                from var(--color) calc(l + 0.122) c calc(h + 6)
+              );
+              /* background-color: var(--yellow); */
               transform: rotate(30deg) skew(-30deg)
                 translate(calc(var(--cube) * 0.99), calc(var(--cube) * -0.265))
                 scaleY(0.864);
+              justify-content: center;
+              align-items: center;
+              text-align: center;
+              display: flex;
+              font-weight: 900;
+              text-transform: uppercase;
+              font-size: var(--font-size-xs);
+              line-height: var(--line-height-xs);
             }
-            .side {
-              background-color: var(--amber);
+            .left {
+              font-size: var(--font-size-xs);
+              line-height: var(--line-height-xs);
+              background-color: oklch(
+                from var(--color) calc(l + 0.066) c calc(h + 3)
+              );
+              /* background-color: var(--amber); */
               transform: rotate(30deg) skewX(30deg)
                 translate(calc(var(--cube) * 0.3), calc(var(--cube) * 0.6))
                 scaleY(0.864);
+            }
+            .fees {
+              display: flex;
+              flex-direction: column;
+              height: 100%;
+              justify-content: center;
+              align-items: center;
             }
           }
         }
