--- a/websites/default/index.html
+++ b/websites/default/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="description"
-      content="An open source Bitcoin Core data extractor and visualizer"
-    />
+    <meta name="description" content="Bitcoin with X-ray vision" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
